--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.application.name=demo
 spring.datasource.url=jdbc:postgresql://localhost:5432/salonio
 spring.datasource.username=salonio_user
 spring.datasource.password=salonio_pass
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
