Application properties change

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 spring.application.name=demo
-spring.datasource.url=jdbc:postgresql://localhost:5432/salonio
-spring.datasource.username=salonio_user
-spring.datasource.password=salonio_pass
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/salonio}
+spring.datasource.username=${PGUSER:salonio_user}
+spring.datasource.password=${PGPASSWORD:salonio_pass}
+spring.jpa.hibernate.ddl-auto=${DDL_AUTO:create-drop}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
