Application properties change for railway

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=demo
-spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/salonio}
+spring.datasource.url=jdbc:postgresql://${PGHOST:localhost}:${PGPORT:5432}/${PGDATABASE:salonio}
 spring.datasource.username=${PGUSER:salonio_user}
 spring.datasource.password=${PGPASSWORD:salonio_pass}
 spring.jpa.hibernate.ddl-auto=${DDL_AUTO:create-drop}
