--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.security:spring-security-config'
 	implementation 'org.springframework.security:spring-security-web'
-	// TODO add swagger
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    // TODO add swagger
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.postgresql:postgresql:42.7.3'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
